--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,95 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+		monospace;
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+
+.container {
+	max-width: 1440px;
+	margin: 0 auto;
+}
+
+.mainBg {
+	background-image: url('../public/images/bg.png');
+	background-size: contain;
+}
+
+.card {
+	background: #ffffff;
+	box-shadow: 0px 8px 24px rgba(149, 157, 165, 0.2);
+	border-radius: 16px;
+	padding: 30px;
+}
+
+.header_shadow {
+	box-shadow: 0px 8px 24px rgba(149, 157, 165, 0.2);
+}
+
+.hint_shadow {
+	box-shadow: 0px 8px 24px rgba(149, 157, 165, 0.2);
+}
+
+.modal {
+	position: fixed;
+	top: 30vh;
+	left: 35%;
+	width: 30%;
+	z-index: 100;
+	overflow: hidden;
+}
+
+.modal_card {
+	padding: 50px;
+	background: #ffffff;
+	box-shadow: 0px 20px 24px -4px rgba(16, 24, 40, 0.08),
+		0px 8px 8px -4px rgba(16, 24, 40, 0.03);
+	border-radius: 12px;
+}
+.verify_modal_card {
+	padding: 50px 40px 30px;
+	background: #ffffff;
+	border-radius: 16px;
+}
+
+.popUpModal {
+	position: absolute;
+	top: 70vh;
+	left: 60%;
+	z-index: 100;
+	background: #ffffff;
+	box-shadow: 0px 8px 24px rgba(149, 157, 165, 0.2);
+	border-radius: 16px;
+}
+
+.backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	z-index: 10;
+	background: rgba(0, 0, 0, 0.4);
 }
