--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+	font-family: 'OpenSans';
+	src: local('OpenSans'),
+		url('./fonts/Open_Sans/static/OpenSans/OpenSans-Regular.ttf')
+			format('truetype');
+}
+
 body {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
+	font-family: 'OpenSans';
+	font-weight: 400;
+	font-size: 14px;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
@@ -25,6 +32,34 @@ a {
 *::before,
 *::after {
 	box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h5,
+h6 {
+	color: #06042c;
+}
+
+p {
+	color: #06042c;
+}
+
+::-webkit-scrollbar {
+	width: 6px;
+}
+
+::-webkit-scrollbar-track {
+	background-color: #fff;
+	border-radius: 20px;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #c0c0c0;
+	border-radius: 20px;
 }
 
 .container {
@@ -92,4 +127,30 @@ a {
 	height: 100vh;
 	z-index: 10;
 	background: rgba(0, 0, 0, 0.4);
+}
+
+.examTimeCard {
+	background: #ffffff;
+	box-shadow: 0px 8px 24px rgba(149, 157, 165, 0.2);
+	border-radius: 16px;
+	padding: 20px;
+}
+
+.examSummaryCard {
+	background: #ffffff;
+	padding: 20px 10px 20px 20px;
+	box-shadow: 0px 8px 30px rgba(149, 157, 165, 0.3);
+	border-radius: 16px;
+}
+
+.options {
+	background: #ffffff;
+	box-shadow: 0px 8px 24px rgba(149, 157, 165, 0.2);
+	border-radius: 16px;
+}
+
+.endExamBtn {
+	border: 2px solid #0075ff;
+	filter: drop-shadow(0px 8px 24px rgba(149, 157, 165, 0.2));
+	border-radius: 8px;
 }
